--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,11 @@
 site_name: SkyWay JS SDK APIリファレンス
 pages:
-    - Home: index.md
+    - Introduction: index.md
     - Peer: peer.md
+    - MediaConnection: mediaconnection.md
+    - DataConnection: dataconnection.md
+    - MeshRoom: meshroom.md
+    - SFURoom: sfuroom.md
 theme:
   name: 'material'
   language: 'ja'
